--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+
+    <link rel="stylesheet" href="./CSS/bootstrap.css" />
+    <link rel="stylesheet" href="./CSS/styles.css" />
    
   </head>
 
   <body>
-    <div class="jumbotron-fluid">
-      <div class="container-fluid" id="welcomeDelani">
-        <img
-          src="./images/assets/logo/logo.png"
-          alt="Delani-Studio-Logo"
-          id="logo-img"
-        />
+
         <h3>WELCOME<br />TO DELANI STUDIO</h3>
         <p>
           <small>PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</small>
