this will add the jumbotron

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 
   <body>
 
-        <h3>WELCOME<br />TO DELANI STUDIO</h3>
-        <p>
-          <small>PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</small>
-        </p>
-        <img src="./images/assets/mouse_click.png" id="mouse-icon" />
-      </div>
-    </div>
+    <div class="jumbotron-fluid">
+      <div class="container-fluid" id="welcomeDelani">
+        <img
+          src="./images/assets/logo/logo.png"
+          alt="Delani-Studio-Logo"
+          id="logo-img"
+        />
+
+        
     <div class="container-fluid">
       <div class="aboutUs" id="aboutDelani">
         <h3><small>ABOUT US</small></h3>
