this will add the home section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
           id="logo-img"
         />
 
-        
+        <h3>WELCOME<br />TO DELANI STUDIO</h3>
+        <p>
+          <small>PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</small>
+        </p>
+        <img src="./images/assets/mouse_click.png" id="mouse-icon" />
+      </div>
+    </div>
+    
     <div class="container-fluid">
       <div class="aboutUs" id="aboutDelani">
         <h3><small>ABOUT US</small></h3>
