--- a/index.html
+++ b/index.html
@@ -29,18 +29,26 @@
         <img src="./images/assets/mouse_click.png" id="mouse-icon" />
       </div>
     </div>
-
-   
-    <div class="container-fluid" id="delaniServices">
-      <h3><small>SERVICES</small></h3>
-      <p>
-        Before we sign a contract or write a line of code our time will spend
-        the necessary time to understand the product vision<br />The outcome of
-        this scoping session ia proposal or high level statement of work.<br />
-        based on your requirements, we can offer acomplete offering or just the
-        pieces you need.
-      </p>
+    <div class="container-fluid">
+      <div class="aboutUs" id="aboutDelani">
+        <h3><small>ABOUT US</small></h3>
+        <p>
+          When you work with us, you are a team of committed collaborators. All
+          aspects of our software development process are
+          integrated,interactive<br />and agile.
+        </p>
+        <p>
+          Our approach unifies design,development and product management to
+          create exceptional products.
+        </p>
+        <p>
+          We start each project by understanding your business goals, the user's
+          needs and the product requirements.
+        </p>
+        <p>Then we help translate them into effective and elegant solutions.</p>
+      </div>
     </div>
+  
     <div class="container-fluid" id="what-we-do">
       <h3 id="whatWeDo"><b>WHAT WE DO</b></h3>
     </div>
