--- a/index.html
+++ b/index.html
@@ -48,58 +48,17 @@
         <p>Then we help translate them into effective and elegant solutions.</p>
       </div>
     </div>
-  
-    <div class="container-fluid" id="what-we-do">
-      <h3 id="whatWeDo"><b>WHAT WE DO</b></h3>
+    <div class="container-fluid" id="delaniServices">
+      <h3><small>SERVICES</small></h3>
+      <p>
+        Before we sign a contract or write a line of code our time will spend
+        the necessary time to understand the product vision<br />The outcome of
+        this scoping session ia proposal or high level statement of work.<br />
+        based on your requirements, we can offer acomplete offering or just the
+        pieces you need.
+      </p>
     </div>
-    <div class="row">
-      <div class="col-sm-4">
-        <img
-          src="./images/assets/services_icons/design_icon.png"
-          alt=""
-          id="design-icon"
-        />
-        <h4>DESIGN</h4>
-        <p id="design-paragraph">
-          Our design practice offers a full range of services including brand
-          strategy, interaction and visual and user experience testing.
-          <br /><br />
-          Throughout your project, our designers create and implement visual
-          design workflows, solicit user feedback and work with you to make sure
-          what gets built is what is needed.
-        </p>
-      </div>
-      <div class="col-sm-4">
-        <img
-          src="./images/assets/services_icons/dev_icon.png"
-          alt=""
-          id="development-icon"
-        />
-        <h4>DEVELOPMENT</h4>
-        <p id="development-paragraph">
-          All engineers are fluent in the latest enterprise, mobile and web
-          development technologies. <br /><br />
-          They colaborate with your team to write, and improve code on a daily
-          basis, using proven practices using test-driven development and pair
-          programming.
-        </p>
-      </div>
-      <div class="col-sm-4">
-        <img
-          src="./images/assets/services_icons/product_icon.png"
-          alt=""
-          id="product-icon"
-        />
-        <h4>PRODUCT MANAGEMENT</h4>
-        <p id="product-paragraph">
-          Planning and development is iterative.Because we are constantly coding
-          and testing, the products we build are always ready to go live.
-          <br /><br />
-          This iterative process allows for changes as the business requirements
-          evolve
-        </p>
-      </div>
-    </div>
+    
     <div class="container">
       <div class="portfolio">
         <h3>PORTFOLIO</h3>
