this will  add the portfolio section

--- a/index.html
+++ b/index.html
@@ -58,112 +58,58 @@
         pieces you need.
       </p>
     </div>
-    
-    <div class="container">
-      <div class="portfolio">
-        <h3>PORTFOLIO</h3>
-        <div class="row col-space">
-          <div class="col-md-3 p-2">
-            <div class="card img0">
-              <img
-                src="./images/assets/portfolio/work4.jpg"
-                class="img-fluid"
-                alt="pic-1"
-              />
-              <div class="work0">
-                <p id="pro">BLANK</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 p-2">
-            <div class="card img1">
-              <img
-                src="./images/assets/portfolio/work3.jpg"
-                class="img-fluid"
-                alt="pic-2"
-              />
-              <div class="work1">
-                <p id="pro">SECURITY</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 p-2">
-            <div class="card img2">
-              <img
-                src="./images/assets/portfolio/work2.jpg"
-                class="img-fluid"
-                alt="pic-3"
-              />
-              <div class="work2">
-                <p id="pro">DIAMONDS</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 p-2">
-            <div class="card img3">
-              <img
-                src="./images/assets/portfolio/work1.jpg"
-                class="img-fluid"
-                alt="pic-4"
-              />
-              <div class="work3">
-                <p id="pro">TERMINAL</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row col-space">
-          <div class="col-md-3 p-2">
-            <div class="card img4">
-              <img
-                src="./images/assets/portfolio/work5.jpg"
-                class="img-fluid"
-                alt="pic-5"
-              />
-              <div class="work4">
-                <p id="pro">LANDING PAGE</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 p-2">
-            <div class="card img5">
-              <img
-                src="./images/assets/portfolio/work6.jpg"
-                class="img-fluid"
-                alt="pic-6"
-              />
-              <div class="work5">
-                <p id="pro">TABS</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 p-2">
-            <div class="card img6">
-              <img
-                src="./images/assets/portfolio/work7.jpg"
-                class="img-fluid"
-                alt="pic-7"
-              />
-              <div class="work6">
-                <p id="pro">LOGO</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 p-2">
-            <div class="card img7">
-              <img
-                src="./images/assets/portfolio/work8.jpg"
-                class="img-fluid"
-                alt="pic-8"
-              />
-              <div class="work7">
-                <p id="pro">RESTAURANT</p>
-              </div>
-            </div>
-          </div>
-        </div>
+    <div class="container-fluid" id="what-we-do">
+      <h3 id="whatWeDo"><b>WHAT WE DO</b></h3>
+    </div>
+    <div class="row">
+      <div class="col-sm-4">
+        <img
+          src="./images/assets/services_icons/design_icon.png"
+          alt=""
+          id="design-icon"
+        />
+        <h4>DESIGN</h4>
+        <p id="design-paragraph">
+          Our design practice offers a full range of services including brand
+          strategy, interaction and visual and user experience testing.
+          <br /><br />
+          Throughout your project, our designers create and implement visual
+          design workflows, solicit user feedback and work with you to make sure
+          what gets built is what is needed.
+        </p>
+      </div>
+      <div class="col-sm-4">
+        <img
+          src="./images/assets/services_icons/dev_icon.png"
+          alt=""
+          id="development-icon"
+        />
+        <h4>DEVELOPMENT</h4>
+        <p id="development-paragraph">
+          All engineers are fluent in the latest enterprise, mobile and web
+          development technologies. <br /><br />
+          They colaborate with your team to write, and improve code on a daily
+          basis, using proven practices using test-driven development and pair
+          programming.
+        </p>
+      </div>
+      <div class="col-sm-4">
+        <img
+          src="./images/assets/services_icons/product_icon.png"
+          alt=""
+          id="product-icon"
+        />
+        <h4>PRODUCT MANAGEMENT</h4>
+        <p id="product-paragraph">
+          Planning and development is iterative.Because we are constantly coding
+          and testing, the products we build are always ready to go live.
+          <br /><br />
+          This iterative process allows for changes as the business requirements
+          evolve
+        </p>
       </div>
     </div>
+   
     <div class="container-fluid">
       <div class="row">
         <div class="col-md col-md-offset-3" id="form_container">
