--- a/index.html
+++ b/index.html
@@ -109,85 +109,112 @@
         </p>
       </div>
     </div>
-   
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md col-md-offset-3" id="form_container">
-          <h3><b>CONTACT US</b></h3>
-          <form
-            action="https://gmail.us17.list-manage.com/subscribe/post?u=0f8550f6a7d62b5c6de5e392d&amp;id=ae734b29ee"
-            method="post"
-            id="reused_form"
-            name="feedback"
-          >
-            <div class="row">
-              <div class="col-sm-6 form-group">
-                <label for="name">Name:</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="name"
-                  name="name"
-                  placeholder="Name...."
-                  style="color: white"
-                  required
-                />
-              </div>
-              <div class="col-sm-6 form-group">
-                <label for="email"> Email:</label>
-                <input
-                  type="email"
-                  class="form-control"
-                  id="email"
-                  name="email"
-                  placeholder="Email.."
-                  required
-                />
+    <div class="container">
+      <div class="portfolio">
+        <h3>PORTFOLIO</h3>
+        <div class="row col-space">
+          <div class="col-md-3 p-2">
+            <div class="card img0">
+              <img
+                src="./images/assets/portfolio/work4.jpg"
+                class="img-fluid"
+                alt="pic-1"
+              />
+              <div class="work0">
+                <p id="pro">BLANK</p>
               </div>
             </div>
-            <div class="row">
-              <div class="col-sm-12 form-group" id="place">
-                <label for="message"> Message:</label>
-                <textarea
-                  class="form-control"
-                  type="textarea"
-                  name="message"
-                  id="message"
-                  maxlength="6000"
-                  rows="7"
-                  placeholder="Your message here.."
-                ></textarea>
+          </div>
+          <div class="col-md-3 p-2">
+            <div class="card img1">
+              <img
+                src="./images/assets/portfolio/work3.jpg"
+                class="img-fluid"
+                alt="pic-2"
+              />
+              <div class="work1">
+                <p id="pro">SECURITY</p>
               </div>
             </div>
-            #name, #message, #email { color: white;#name, #message, #email {
-            color: white; } }
-
-            <div class="row">
-              <div class="col-sm-12 form-group">
-                <button
-                  type="submit"
-                  class="btn btn-outline-light btn-lg btn-block"
-                  onclick="feedback()"
-                >
-                  Send
-                </button>
+          </div>
+          <div class="col-md-3 p-2">
+            <div class="card img2">
+              <img
+                src="./images/assets/portfolio/work2.jpg"
+                class="img-fluid"
+                alt="pic-3"
+              />
+              <div class="work2">
+                <p id="pro">DIAMONDS</p>
               </div>
             </div>
-          </form>
-          <div class="sent">
-            <div
-              id="success_message"
-              style="width: 100%; height: 100%; display: show"
-            >
-              <h3>
-                Your subscription to our list has been confirmed.Thank you for
-                subscribing!
-              </h3>
+          </div>
+          <div class="col-md-3 p-2">
+            <div class="card img3">
+              <img
+                src="./images/assets/portfolio/work1.jpg"
+                class="img-fluid"
+                alt="pic-4"
+              />
+              <div class="work3">
+                <p id="pro">TERMINAL</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row col-space">
+          <div class="col-md-3 p-2">
+            <div class="card img4">
+              <img
+                src="./images/assets/portfolio/work5.jpg"
+                class="img-fluid"
+                alt="pic-5"
+              />
+              <div class="work4">
+                <p id="pro">LANDING PAGE</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 p-2">
+            <div class="card img5">
+              <img
+                src="./images/assets/portfolio/work6.jpg"
+                class="img-fluid"
+                alt="pic-6"
+              />
+              <div class="work5">
+                <p id="pro">TABS</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 p-2">
+            <div class="card img6">
+              <img
+                src="./images/assets/portfolio/work7.jpg"
+                class="img-fluid"
+                alt="pic-7"
+              />
+              <div class="work6">
+                <p id="pro">LOGO</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 p-2">
+            <div class="card img7">
+              <img
+                src="./images/assets/portfolio/work8.jpg"
+                class="img-fluid"
+                alt="pic-8"
+              />
+              <div class="work7">
+                <p id="pro">RESTAURANT</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
 
     <div class="icons" id="image-icons">
       <img src="./images/assets/social_icons/twitter.png" alt="" />
