this will add the jquery link

--- a/index.html
+++ b/index.html
@@ -291,23 +291,22 @@
         </div>
       </div>
     </div>
-
+    <div class="icons" id="image-icons">
+      <img src="./images/assets/social_icons/twitter.png" alt="" />
+      <img src="./images/assets/social_icons/dribble.png" alt="" />
+      <img src="./images/assets/social_icons/facebook.png" alt="" />
+      <img src="./images/assets/social_icons/g_plus.png" alt="" />
+      <img src="./images/assets/social_icons/skype.png" alt="" />
+      <img src="./images/assets/social_icons/stumble_upon.png" alt="" />
+      <img src="./images/assets/social_icons/behance.png" alt="" />
+      <img src="./images/assets/social_icons/pinterest.png" alt="" />
+      <img src="./images/assets/social_icons/flickr.png" alt="" />
+    </div>
+    <br />
+    <div class="footer">
+      <p id="delani-footer">DELANI STUDIO<br />2019</p>
+    </div>
     
   </body>
-  <script
-    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"
-  ></script>
-  <script type="text/javascript" src="./JavaScript/scripts.js"></script>
+  
 </html>
