--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
 
     <link rel="stylesheet" href="./CSS/bootstrap.css" />
-    <link rel="stylesheet" href="./CSS/styles.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
    
   </head>
 
@@ -17,7 +17,7 @@
     <div class="jumbotron-fluid">
       <div class="container-fluid" id="welcomeDelani">
         <img
-          src="./images/assets/logo/logo.png"
+          src="./images/logo.png"
           alt="Delani-Studio-Logo"
           id="logo-img"
         />
@@ -26,7 +26,7 @@
         <p>
           <small>PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</small>
         </p>
-        <img src="./images/assets/mouse_click.png" id="mouse-icon" />
+        <img src="./images/mouse_click.png" id="mouse-icon" />
       </div>
     </div>
     <div class="container-fluid">
@@ -64,7 +64,7 @@
     <div class="row">
       <div class="col-sm-4">
         <img
-          src="./images/assets/services_icons/design_icon.png"
+          src="./images/design_icon.png"
           alt=""
           id="design-icon"
         />
@@ -80,7 +80,7 @@
       </div>
       <div class="col-sm-4">
         <img
-          src="./images/assets/services_icons/dev_icon.png"
+          src="./images/dev_icon.png"
           alt=""
           id="development-icon"
         />
@@ -95,7 +95,7 @@
       </div>
       <div class="col-sm-4">
         <img
-          src="./images/assets/services_icons/product_icon.png"
+          src="./images/product_icon.png"
           alt=""
           id="product-icon"
         />
@@ -116,7 +116,7 @@
           <div class="col-md-3 p-2">
             <div class="card img0">
               <img
-                src="./images/assets/portfolio/work4.jpg"
+                src="./images/work4.jpg"
                 class="img-fluid"
                 alt="pic-1"
               />
@@ -128,7 +128,7 @@
           <div class="col-md-3 p-2">
             <div class="card img1">
               <img
-                src="./images/assets/portfolio/work3.jpg"
+                src="./images/work3.jpg"
                 class="img-fluid"
                 alt="pic-2"
               />
@@ -140,7 +140,7 @@
           <div class="col-md-3 p-2">
             <div class="card img2">
               <img
-                src="./images/assets/portfolio/work2.jpg"
+                src="./images/work2.jpg"
                 class="img-fluid"
                 alt="pic-3"
               />
@@ -152,7 +152,7 @@
           <div class="col-md-3 p-2">
             <div class="card img3">
               <img
-                src="./images/assets/portfolio/work1.jpg"
+                src="./images/work1.jpg"
                 class="img-fluid"
                 alt="pic-4"
               />
@@ -166,7 +166,7 @@
           <div class="col-md-3 p-2">
             <div class="card img4">
               <img
-                src="./images/assets/portfolio/work5.jpg"
+                src="./images/work5.jpg"
                 class="img-fluid"
                 alt="pic-5"
               />
@@ -178,7 +178,7 @@
           <div class="col-md-3 p-2">
             <div class="card img5">
               <img
-                src="./images/assets/portfolio/work6.jpg"
+                src="./images/work6.jpg"
                 class="img-fluid"
                 alt="pic-6"
               />
@@ -190,7 +190,7 @@
           <div class="col-md-3 p-2">
             <div class="card img6">
               <img
-                src="./images/assets/portfolio/work7.jpg"
+                src="./images/work7.jpg"
                 class="img-fluid"
                 alt="pic-7"
               />
@@ -202,7 +202,7 @@
           <div class="col-md-3 p-2">
             <div class="card img7">
               <img
-                src="./images/assets/portfolio/work8.jpg"
+                src="./images/work8.jpg"
                 class="img-fluid"
                 alt="pic-8"
               />
@@ -292,15 +292,15 @@
       </div>
     </div>
     <div class="icons" id="image-icons">
-      <img src="./images/assets/social_icons/twitter.png" alt="" />
-      <img src="./images/assets/social_icons/dribble.png" alt="" />
-      <img src="./images/assets/social_icons/facebook.png" alt="" />
-      <img src="./images/assets/social_icons/g_plus.png" alt="" />
-      <img src="./images/assets/social_icons/skype.png" alt="" />
-      <img src="./images/assets/social_icons/stumble_upon.png" alt="" />
-      <img src="./images/assets/social_icons/behance.png" alt="" />
-      <img src="./images/assets/social_icons/pinterest.png" alt="" />
-      <img src="./images/assets/social_icons/flickr.png" alt="" />
+      <img src="./images/twitter.png" alt="" />
+      <img src="./images/dribble.png" alt="" />
+      <img src="./images/facebook.png" alt="" />
+      <img src="./images/g_plus.png" alt="" />
+      <img src="./images/skype.png" alt="" />
+      <img src="./images/stumble_upon.png" alt="" />
+      <img src="./images/behance.png" alt="" />
+      <img src="./images/pinterest.png" alt="" />
+      <img src="./images/flickr.png" alt="" />
     </div>
     <br />
     <div class="footer">
@@ -323,5 +323,5 @@
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"
   ></script>
-  <script type="text/javascript" src="./JavaScript/scripts.js"></script>
+  <script type="text/javascript" src="./JavaScript/script.js"></script>
 </html>
