--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <link rel="stylesheet" href="./CSS/bootstrap.css" />
-    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./Css/Bootstrap.css" />
+    <link rel="stylesheet" href="./Css/style.css" />
    
   </head>
 
