this will add space in the html file

--- a/index.html
+++ b/index.html
@@ -1,53 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+<head>
+     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="./Css/Bootstrap.css" />
-    <link rel="stylesheet" href="./Css/style.css" />
+     <link rel="stylesheet" href="./Css/Bootstrap.css">
+     <link rel="stylesheet" href="./Css/style.css">
    
-  </head>
-
-  <body>
-
+</head>
+<body>
     <div class="jumbotron-fluid">
-      <div class="container-fluid" id="welcomeDelani">
-        <img
-          src="./images/logo.png"
-          alt="Delani-Studio-Logo"
-          id="logo-img"
-        />
+        <div class="container-fluid" id="welcomeDelani">
+           <img src="./images/logo.png" alt="Delani-Studio-Logo" id="logo-img">
 
-        <h3>WELCOME<br />TO DELANI STUDIO</h3>
-        <p>
-          <small>PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</small>
-        </p>
-        <img src="./images/mouse_click.png" id="mouse-icon" />
-      </div>
+            <h3>WELCOME<br />TO DELANI STUDIO</h3>
+              <p>
+                <small>PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</small>
+              </p>
+            <img src="./images/mouse_click.png" id="mouse-icon">
+        </div>
     </div>
+
     <div class="container-fluid">
-      <div class="aboutUs" id="aboutDelani">
-        <h3><small>ABOUT US</small></h3>
-        <p>
-          When you work with us, you are a team of committed collaborators. All
-          aspects of our software development process are
-          integrated,interactive<br />and agile.
-        </p>
-        <p>
-          Our approach unifies design,development and product management to
-          create exceptional products.
-        </p>
-        <p>
-          We start each project by understanding your business goals, the user's
-          needs and the product requirements.
-        </p>
-        <p>Then we help translate them into effective and elegant solutions.</p>
-      </div>
+        <div class="aboutUs" id="aboutDelani">
+          <h3><small>ABOUT US</small></h3>
+          <p>
+             When you work with us, you are a team of committed collaborators. All
+             aspects of our software development process are
+             integrated,interactive<br />and agile.
+          </p>
+          <p>
+             Our approach unifies design,development and product management to
+             create exceptional products.
+          </p>
+          <p>
+             We start each project by understanding your business goals, the user's
+             needs and the product requirements.
+          </p>
+          <p>Then we help translate them into effective and elegant solutions.</p>
+        </div>
     </div>
+
     <div class="container-fluid" id="delaniServices">
       <h3><small>SERVICES</small></h3>
       <p>
@@ -58,32 +51,27 @@
         pieces you need.
       </p>
     </div>
+
     <div class="container-fluid" id="what-we-do">
       <h3 id="whatWeDo"><b>WHAT WE DO</b></h3>
     </div>
+
     <div class="row">
       <div class="col-sm-4">
-        <img
-          src="./images/design_icon.png"
-          alt=""
-          id="design-icon"
-        />
+        <img src="./images/design_icon.png" alt="" id="design-icon">
         <h4>DESIGN</h4>
         <p id="design-paragraph">
           Our design practice offers a full range of services including brand
           strategy, interaction and visual and user experience testing.
-          <br /><br />
+          <br><br>
           Throughout your project, our designers create and implement visual
           design workflows, solicit user feedback and work with you to make sure
           what gets built is what is needed.
         </p>
       </div>
+
       <div class="col-sm-4">
-        <img
-          src="./images/dev_icon.png"
-          alt=""
-          id="development-icon"
-        />
+        <img src="./images/dev_icon.png" alt="" id="development-icon">
         <h4>DEVELOPMENT</h4>
         <p id="development-paragraph">
           All engineers are fluent in the latest enterprise, mobile and web
@@ -93,57 +81,47 @@
           programming.
         </p>
       </div>
+
       <div class="col-sm-4">
-        <img
-          src="./images/product_icon.png"
-          alt=""
-          id="product-icon"
-        />
+        <img src="./images/product_icon.png" alt="" id="product-icon">
         <h4>PRODUCT MANAGEMENT</h4>
         <p id="product-paragraph">
           Planning and development is iterative.Because we are constantly coding
           and testing, the products we build are always ready to go live.
-          <br /><br />
+          <br><br>
           This iterative process allows for changes as the business requirements
           evolve
         </p>
       </div>
+
     </div>
+
     <div class="container">
       <div class="portfolio">
         <h3>PORTFOLIO</h3>
         <div class="row col-space">
+
           <div class="col-md-3 p-2">
             <div class="card img0">
-              <img
-                src="./images/work4.jpg"
-                class="img-fluid"
-                alt="pic-1"
-              />
+              <img src="./images/work4.jpg" class="img-fluid" alt="pic-1">
               <div class="work0">
                 <p id="pro">BLANK</p>
               </div>
             </div>
           </div>
+
           <div class="col-md-3 p-2">
             <div class="card img1">
-              <img
-                src="./images/work3.jpg"
-                class="img-fluid"
-                alt="pic-2"
-              />
+              <img src="./images/work3.jpg" class="img-fluid" alt="pic-2">
               <div class="work1">
                 <p id="pro">SECURITY</p>
               </div>
             </div>
           </div>
+
           <div class="col-md-3 p-2">
             <div class="card img2">
-              <img
-                src="./images/work2.jpg"
-                class="img-fluid"
-                alt="pic-3"
-              />
+              <img src="./images/work2.jpg" class="img-fluid" alt="pic-3">
               <div class="work2">
                 <p id="pro">DIAMONDS</p>
               </div>
@@ -151,177 +129,137 @@
           </div>
           <div class="col-md-3 p-2">
             <div class="card img3">
-              <img
-                src="./images/work1.jpg"
-                class="img-fluid"
-                alt="pic-4"
-              />
+              <img src="./images/work1.jpg" class="img-fluid" alt="pic-4">
               <div class="work3">
                 <p id="pro">TERMINAL</p>
               </div>
             </div>
           </div>
         </div>
+
         <div class="row col-space">
           <div class="col-md-3 p-2">
             <div class="card img4">
-              <img
-                src="./images/work5.jpg"
-                class="img-fluid"
-                alt="pic-5"
-              />
+              <img src="./images/work5.jpg" class="img-fluid" alt="pic-5">
               <div class="work4">
                 <p id="pro">LANDING PAGE</p>
               </div>
             </div>
           </div>
+
           <div class="col-md-3 p-2">
             <div class="card img5">
-              <img
-                src="./images/work6.jpg"
-                class="img-fluid"
-                alt="pic-6"
-              />
+              <img src="./images/work6.jpg" class="img-fluid" alt="pic-6">
               <div class="work5">
                 <p id="pro">TABS</p>
               </div>
             </div>
           </div>
+
           <div class="col-md-3 p-2">
             <div class="card img6">
-              <img
-                src="./images/work7.jpg"
-                class="img-fluid"
-                alt="pic-7"
-              />
+              <img src="./images/work7.jpg" class="img-fluid" alt="pic-7">
               <div class="work6">
                 <p id="pro">LOGO</p>
               </div>
             </div>
           </div>
+
           <div class="col-md-3 p-2">
             <div class="card img7">
-              <img
-                src="./images/work8.jpg"
-                class="img-fluid"
-                alt="pic-8"
-              />
+              <img src="./images/work8.jpg" class="img-fluid" alt="pic-8">
               <div class="work7">
                 <p id="pro">RESTAURANT</p>
               </div>
             </div>
           </div>
+
         </div>
       </div>
     </div>
+
     <div class="container-fluid">
       <div class="row">
         <div class="col-md col-md-offset-3" id="form_container">
           <h3><b>CONTACT US</b></h3>
-          <form
-            action="https://gmail.us17.list-manage.com/subscribe/post?u=0f8550f6a7d62b5c6de5e392d&amp;id=ae734b29ee"
-            method="post"
-            id="reused_form"
-            name="feedback"
-          >
+          <form action="https://gmail.us17.list-manage.com/subscribe/post?u=0f8550f6a7d62b5c6de5e392d&amp;id=ae734b29ee" method="post" id="reused_form" name="feedback">
             <div class="row">
+
               <div class="col-sm-6 form-group">
                 <label for="name">Name:</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="name"
-                  name="name"
-                  placeholder="Name...."
-                  style="color: white"
-                  required
-                />
+                <input type="text" class="form-control" id="name" name="name" placeholder="Name...." style="color: white" required>
               </div>
+
               <div class="col-sm-6 form-group">
                 <label for="email"> Email:</label>
-                <input
-                  type="email"
-                  class="form-control"
-                  id="email"
-                  name="email"
-                  placeholder="Email.."
-                  required
-                />
+                <input type="email" class="form-control" id="email" name="email" placeholder="Email.." required>
               </div>
             </div>
+
             <div class="row">
               <div class="col-sm-12 form-group" id="place">
                 <label for="message"> Message:</label>
-                <textarea
-                  class="form-control"
-                  type="textarea"
-                  name="message"
-                  id="message"
-                  maxlength="6000"
-                  rows="7"
-                  placeholder="Your message here.."
-                ></textarea>
+                <textarea class="form-control" type="textarea" name="message" id="message" maxlength="6000" rows="7" placeholder="Your message here.."></textarea>
               </div>
             </div>
+
             #name, #message, #email { color: white;#name, #message, #email {
             color: white; } }
+
             <div class="row">
               <div class="col-sm-12 form-group">
-                <button
-                  type="submit"
-                  class="btn btn-outline-light btn-lg btn-block"
-                  onclick="feedback()"
-                >
-                  Send
-                </button>
+                <button type="submit" class="btn btn-outline-light btn-lg btn-block" onclick="feedback()"> Send </button>
               </div>
             </div>
+
           </form>
+
           <div class="sent">
-            <div
-              id="success_message"
-              style="width: 100%; height: 100%; display: show"
-            >
+            <div id="success_message" style="width: 100%; height: 100%; display: show">
               <h3>
                 Your subscription to our list has been confirmed.Thank you for
                 subscribing!
               </h3>
             </div>
           </div>
+
         </div>
       </div>
     </div>
+
     <div class="icons" id="image-icons">
-      <img src="./images/twitter.png" alt="" />
-      <img src="./images/dribble.png" alt="" />
-      <img src="./images/facebook.png" alt="" />
-      <img src="./images/g_plus.png" alt="" />
-      <img src="./images/skype.png" alt="" />
-      <img src="./images/stumble_upon.png" alt="" />
-      <img src="./images/behance.png" alt="" />
-      <img src="./images/pinterest.png" alt="" />
-      <img src="./images/flickr.png" alt="" />
+      <img src="./images/twitter.png" alt="">
+      <img src="./images/dribble.png" alt="">
+      <img src="./images/facebook.png" alt="">
+      <img src="./images/g_plus.png" alt="">
+      <img src="./images/skype.png" alt="">
+      <img src="./images/stumble_upon.png" alt="">
+      <img src="./images/behance.png" alt="" >
+      <img src="./images/pinterest.png" alt="">
+      <img src="./images/flickr.png" alt="">
     </div>
-    <br />
+
+    <br>
     <div class="footer">
       <p id="delani-footer">DELANI STUDIO<br />2019</p>
     </div>
     
-  </body>
-  <script
+</body>
+<script
     src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"
-  ></script>
-  <script
+    crossorigin="anonymous"></script>
+
+<script
     src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
     integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"
-  ></script>
-  <script
+    crossorigin="anonymous"></script>
+
+<script
     src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"
-  ></script>
-  <script type="text/javascript" src="./JavaScript/script.js"></script>
+    crossorigin="anonymous"></script>
+
+<script type="text/javascript" src="./JavaScript/script.js"></script>
+
 </html>
