--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         Before we sign a contract or write a line of code our time will spend
         the necessary time to understand the product vision<br />The outcome of
         this scoping session ia proposal or high level statement of work.<br />
-        based on your requirements, we can offer acomplete offering or just the
+        based on your requirements, we can offer complete offering or just the
         pieces you need.
       </p>
     </div>
@@ -76,7 +76,7 @@
         <p id="development-paragraph">
           All engineers are fluent in the latest enterprise, mobile and web
           development technologies. <br /><br />
-          They colaborate with your team to write, and improve code on a daily
+          They collaborate with your team to write, and improve code on a daily
           basis, using proven practices using test-driven development and pair
           programming.
         </p>
