this will change the javascript path

--- a/index.html
+++ b/index.html
@@ -260,6 +260,6 @@
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
 
-<script type="text/javascript" src="./JavaScript/script.js"></script>
+<script type="text/javascript" src="./Javascript/script.js"></script>
 
 </html>
